AppWindow update